--- a/11-inline-markup/11-inline-markup.html
+++ b/11-inline-markup/11-inline-markup.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>
-      11: Inline markup
-    </title>
-  </head>
-  <body>
-    <header>
-      <h1>
-        Inline markup
-      </h1>
-      <p>Use the inline elements mentioned in the instructions for this exercise on the markup below.
-    </header>
-    <main>
 
-      <!-- In this example, the 'Wait!' needs stressing when vocalised -->
-      <p>
-        "Wait!" shouted Jesse.
-      </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <title>
+    11: Inline markup
+  </title>
+</head>
 
-      <hr>
+<body>
+  <header>
+    <h1>
+      Inline markup
+    </h1>
+    <p>Use the inline elements mentioned in the instructions for this exercise on the markup below.
+  </header>
+  <main>
 
-      <!-- It's a good idea to tell a computer how to read a datetime: -->
-      <p>
-        The time is now 2pm, on Wednesay the 12th of February, 2020.
-      </p>
+    <!-- In this example, the 'Wait!' needs stressing when vocalised -->
+    <p>
+      <em>"Wait!"</em> shouted Jesse.
+    </p>
 
-      <hr>
+    <hr>
 
-      <!-- What do 'H' and 'O' mean here? -->
-      <p>
-        The elements H and O, bond as H20, or water (as it is colloquaially known).
-      </p>
+    <!-- It's a good idea to tell a computer how to read a datetime: -->
+    <p>
+      The time is now 2pm, on Wednesay the 12<sup>th</sup> of February, 2020.
+    </p>
 
-      <hr>
+    <hr>
 
-      <!-- Sometimes we just want to make something look a certain way -->
-      <p>
-        Editor's Notes:<br>
+    <!-- What do 'H' and 'O' mean here? -->
+    <p>
+      <abbr>The elements H and O, bond as H20, or water (as it is colloquaially known).</abbr><br>
+      <abbr>H</abbr><sub>2</sub> <dfn>means hydrogen time two</dfn><br><abbr>O</abbr> <dfn>means oxygen</dfn>
+    </p>
 
-        Please use CTRL+B to bold this word: Critical<br>
-        Please use CTRL+I to italicise this word: Doubtful<br>
+    <hr>
 
-        Please underline this word: Thinking<br>
-        Please put a line through this word: Assuming<br>
+    <!-- Sometimes we just want to make something look a certain way -->
+    <p>
+      Editor's Notes:<br>
 
-        Please show that the word 'slow' was removed, and 'quick' added in its place in the following sentence:
-        "The slow brown fox jumped over the lazy dog."<br>
-      </p>
+      Please use CTRL+B to bold this word:<b>Critical</b><br>
+      Please use CTRL+I to italicise this word: <i>Doubtful</i><br>
+
+      Please underline this word: <u>Thinking</u><br>
+      Please put a line through this word :<s>Assuming</s><br>
+
+      Please show that the word
+      <pre>'slow'</pre> was removed, and 'quick' added in its place in the following sentence:
+      "The slow brown fox jumped over the lazy dog."<br>
 
       <hr>
 
       <!-- We can do the same with samples of code, even maintaining the whitespace: -->
       <p>
-        "Woah! 'that' was unexpected!" exclaimed Keith.<br>
+        <var>"Woah! 'that' was unexpected!"</var> exclaimed Keith.<br>
         Curiously, Jesse looked at the output on Keith's screen and it said:<br>
 
-          Unexpected value for argument 'that'
-            - in function clickHandler, line 12
-            - called from function anonymous, line 34
+        Unexpected value for argument 'that'
+        - in function clickHandler, line 12
+        - called from function anonymous, line 34
       </p>
 
       <hr>
@@ -72,10 +75,11 @@
       <ul>
         <li>
           <a href="#bell-222">Bell 222</a>:<br>
-          The Model 222 is a helicopter made by the Bell Helicopter Corporation.
+          The Model <b>222</b> is a helicopter made by the Bell Helicopter Corporation.
         </li>
       </ul>
 
-    </main>
-  </body>
+  </main>
+</body>
+
 </html>
