--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -54,6 +54,19 @@
           comment.
         </p>
       </dd>
+    <!-- Add the next element here as a <dt> & <dd> pair -->
+      <dt>
+        <code>&lt;&gt;b</code>
+      </dt>
+      <dd>
+      <p>
+        The b element (<code>&lt;b&gt;</code>) is one of the fundamental elements in the HTML.
+      </p>
+      <p>
+        It allows a user to represent a span of text to be stylistically offset from the normal prose without conveying any extra importance.
+        Examples are key words in a document abstract, product names in a review, or other spans of text whose typical typographic presentation is bold.
+      </p>
+    </dd>
       <dt>
         <code>&lt;body&gt;</code>
       </dt>
@@ -113,7 +126,31 @@
         </p>
       </dd>
       <dt>
-        <code>&lt;dv&gt;</code>
+        <code>&lt;del&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The del element (<code>&lt;del&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          It represents a removal from the document.
+          Thedel elements should not cross implied paragraph boundaries.
+        </p>
+      </dd>
+      <dt>
+        <code>&lt;dfn&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The dfn element (<code>&lt;dfn&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          The dfn element represents the defining instance of a term. The paragraph, description list group,
+           or section that is the nearest ancestor of the dfn element must also contain the definition(s) for the term given by the dfn element.
+        </p>
+      </dd>
+      <dt>
+        <code>&lt;div&gt;</code>
       </dt>
       <dd>
         <p>
@@ -124,19 +161,7 @@
           children and it can be used with the class and lang.
         </p>
       </dd>
-      <dt>
-        <code>&lt;dt&gt;</code>
-      </dt>
-      <dd>
-        <p>
-          The dt element (<code>&lt;dt&gt;</code>) is one of the fundamental elements in HTML.
-        </p>
-        <p>
-          It allows a user to represent the term, or name,
-          part of a term-description group in a description list (dl element)..
-        </p>
-      </dd>
-      <dt>
+    <dt>
         <code>&lt;DOCTYPE&gt;</code>
       </dt>
       <dd>
@@ -145,8 +170,33 @@
         </p>
         <p>
           It is a required preamble and must consist of the following characters, like this:
-
           A string that is an ASCII case-insensitive match for the string
+        </p>
+      </dd>
+      <dt>
+        <code>&lt;dt&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The dt element (<code>&lt;dt&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          It represents the term,
+           or name, part of a term-description group in a description list (dl element).
+        </p>
+      </dd>
+      <dt>
+        <code>&lt;em&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The em element (<code>&lt;em&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          It represents stress emphasis of its contents.
+          The level of emphasis that a particular piece of content has is given by its number of ancestor em elements.
+          The 'stress' being referred to is linguistic.
+          If spoken, this stress would be emphasised pronunciation on a word that can change the nuance of a sentence.          .
         </p>
       </dd>
       <dt>
@@ -222,6 +272,19 @@
         </p>
       </dd>
       <dt>
+        <code>&lt;i&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The i element (<code>&lt;i&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          It represents  a span of text in an alternate voice or mood,
+           or otherwise offset from the normal prose, such as a taxonomic designation, a technical term,
+            an idiomatic phrase from another language, a thought, a ship name, or some other prose whose typical typographic presentation is italicized.
+        </p>
+      </dd>
+      <dt>
         <code>&lt;iframe&gt;</code>
       </dt>
       <dd>
@@ -253,6 +316,18 @@
           The src attribute must be present, and must contain a valid non-empty URL potentially
           surrounded by spaces referencing a non-interactive, optionally animated,
           image resource that is neither paged nor scripted.
+        </p>
+      </dd>
+      <dt>
+        <code>&lt;ins&gt;</code>
+      </dt>
+      <dd>
+        <p>
+          The ins element (<code>&lt;ins&gt;</code>) is one of the fundamental elements in HTML.
+        </p>
+        <p>
+          The ins element represents an addition to the document.
+          The ins elements should not cross implied paragraph boundaries.
         </p>
       </dd>
       <dt>
