--- a/14-blog-design/14-blog-design.html
+++ b/14-blog-design/14-blog-design.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8" />
-<title>Blog designe</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Blog designe</title>
 
-<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 
-<body>
-<div id="container"></div>
-<div id="header">
-  <h3><a href="#">Lost in Madagascar</a></h3>
-</div>
-
-<div id="container"></div>
-<div id="header">
-	<h4><a href="#">HOME</a></h4>
-		<h4><a href="#">ABOUT</a></h4>
-		<h4><a href="#">SAMPLE POST</a></h4>
-		<h4><a href="#">CONTACT</a></h4>
-</div>
-<div id="container"></div>
-<div id="header">
-	<h1><a href="#">Lost</a></h1>
-</div>
-		<div id="socialize">
-			<h4>Socialize</h4>
-			<ul>
-				<li class="twitter"><a href="#">Twitter</a></li>
-				<li class="facebook"><a href="#">Facebook</a></li>
-        <li class="youtube"><a href="#">YouTube</a></li>
-        <li class="github"><a href="#">
-			</ul>
-		</div>
-
-		<div id="photos">
-			<h4>Latest designs &amp; artworks</h4>
-			<div id="flickrimages"></div>
-		</div>
-
-		<p id="back-top"><a href="#">Back to top</a></p>
-	</div>
-</div>
+  <body>
+    <header>
+        <h1><a href="https://blog/lost_in_madagascar">Lost in Madagascar</a></h1>
+      <nav>
+        <ul>
+          <li>
+              <a href="/home">HOME</a>
+              <a href="/about">ABOUT</a>
+              <a href="/sample_post">SAMPLE POST</a>
+              <a href="contact">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div id="container"></div>
+      <div id="header">
+        <h2><a href="/lost"><b>Lost</b></a></h2>
+        <p>Journal of a tourist lost in Madagascar</p>
+      </div>
+      <p>
+        <b>Man must explore, and this is exploration at its greatest.</b>
+      </p>
+      <p>
+        Problems look mighty small from 150 miles up
+      </p>
+      <small>
+        <a href="#">Posted by <b>Jesse</b> on September 24, 2019</a>
+      </small>
+      <p>
+        <b>I believe every human has a finite number of heartbeats. I don't intend to waste any of time.</b>
+      <p>
+      <small>
+        <a href="#">Posted by <b>Jesse</b> on September 18, 2019</a>
+      </small>
+      <small>
+        <a href="https://www.older_post.com"><br><mark>OLDER POSTS</mark></a>
+      </small>
+      <footer>
+        <a href="https://www.twitter.com">
+          <img src="twitter.png" alt="Go to twitter!" width="25" height="25">
+        </a>
+        <a href="https://www.facebook.com">
+          <img src="facebook.png" alt="Go to facebook!" width="30" height="30">
+        </a>
+        <a href="https://www.github.com">
+          <img src="github.png" alt="Go to github!" width="28" height="28">
+        </a>
+        <p><a href="/">Copyright &copy; Your website 2020</a></p><p></p>
+      </footer>
+    </main>
+  </body>
+</html>
